--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
-  <body class="w-screen h-screen grid place-content-center place-items-center">
+  <body class="h-screen w-screen grid place-items-center place-content-center">
     <app-root></app-root>
   </body>
 </html>
